welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  if ((a>20 ||a<10) && (b>20 ||b<10)){
    return 0
  }
  if (a<b && b<=20){
    return b
  }
  if (a<b && b>20){
    return a}
  if (b<a && a<=20){
    return a}
  if (b<a && a>20){
    return b
  }
}